# lumapi

./: .gitignore  AGENTS.md  launch-cam.sh
lumapi-cam/: Cargo.toml  README.md  build_bgra.py  camera_service.py  mpv-touch-input.conf  package-lock.json  package.json  touch-helper.lua  touch_bridge.py  vite.config.ts
lumapi-cam/rust-src/: main.rs
lumapi-cam/src/: App.css  App.tsx
lumapi-cam/src-tauri/: Cargo.toml  README.md  tauri.conf.json
lumapi-cam/src-tauri/src/: lib.rs  main.rs
lumapi-cam/ui/: appwindow.slint
lumapi-cam/ui/assets/img_bgra/: exit.bgra  forward.bgra  pause.bgra  play.bgra  rewind.bgra
lumapi-hud-test/: Cargo.toml
lumapi-hud-test/src/: main.rs
lumapi-hud-test/ui/: appwindow.slint
