[package]
name = "lumapi-cam"
version = "0.1.0"
edition = "2024"

build = "build.rs"

[[bin]]
name = "lumapi-cam"
path = "rust-src/main.rs"

[dependencies]
slint = { version = "1.7.0", features = ["backend-linuxkms-noseat"] }
image = "0.25.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.9"

[build-dependencies]
slint-build = "1.7"
